--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
     </head>
     <body>
-      <p> Hello! </p>
-     </body>
+      <h1> How to Tennis! </h1>
+      <p> Learn the Basics! </p>
+      <ul>
+        <li> Lines </li>
+        <p> The line rules are the most important rules to know as a tennis player. In singles, the ball should land within the lines of the court, excluding the outside lanes. In doubles, the whole court, including the outside lanes, is able to be used. On serves, the ball must land within the service boxes of the court. 
+          <li> Singles and Doubles </li>
+          <p> Singles in tennis involves a one on one match. Singles often take more energy and focus than doubles. Doubles in tenis is were two teams of two play against eachother. One player on each team is at the net while the other stays back to either serve or return.
+            <li> Scoring </li>
+            <p> Scoring in tennis is very different to most other sports. Tennis is played by games and sets. The first to win six games wins the set. The first to win two sets wins the match. Scoring for games goes by love(zero), 15, 30, 40 and then game. If both players reach 40, the game is at deuce. Once the game is at deuce, a player must win two points in a row to win the game.
+        </body>
      </html>
