--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
           <p> Singles in tennis involves a one on one match. Singles often take more energy and focus than doubles. Doubles in tenis is were two teams of two play against eachother. One player on each team is at the net while the other stays back to either serve or return.
             <li> Scoring </li>
             <p> Scoring in tennis is very different to most other sports. Tennis is played by games and sets.  Scoring for games goes by love(zero), 15, 30, 40 and then game. If both players reach 40, the game is at deuce. Once the game is at deuce, a player must win two points in a row to win the game.The first to win six games wins the set, but you must win by atleast two games. If the score reaches 7-7, a 10-point tie breaker must be played. The first to win two sets wins the match.
+       <img src= "http://www.wbtc.org.uk/img/Tennis-Club-Header-Advert.jpg'
         </body>
      </html>
