--- a/index.html
+++ b/index.html
@@ -3,6 +3,40 @@
     <head>
     </head>
     <body>
+      			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="WB1.html">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="WB2.html">Breakfast</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="WB3.html">Dinner</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown link
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
+			<h1> Best Foods </h1>
+			<img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/food-recomended-on-low-carb-diet-or-ketogenic-diet-royalty-free-image-1013107176-1546025560.jpg?resize=480:*"
+		
+		</body>
+	</html>
       <h1> How to Tennis! </h1>
       <p> Learn the Basics! </p>
       <ul>
